--- a/app/src/main/res/layout/movie_details.xml
+++ b/app/src/main/res/layout/movie_details.xml
@@ -7,7 +7,7 @@
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:paddingBottom="20dp">
 
 
@@ -77,6 +77,9 @@
             app:layout_constraintTop_toBottomOf="@+id/movie_details_poster"
             tools:text="Wisecracking mercenary Deadpool battles the evil and powerful Cable and other bad guys to save a boy's life." />
 
+
+
+
         <LinearLayout
             android:id="@+id/trailer_tv_linearLayout"
             android:layout_width="match_parent"
@@ -93,7 +96,7 @@
                 android:id="@+id/trailer_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Trailers"
+                android:text="@string/trailers"
                 android:textColor="@color/movieTitle"
                 android:textSize="26sp" />
         </LinearLayout>
@@ -110,12 +113,10 @@
             android:id="@+id/review_tv_linearLayout"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_marginTop="16dp"
             android:background="@color/movieTitleBackground"
             android:gravity="center"
             android:orientation="vertical"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/trailer_recycler">
 
@@ -123,9 +124,9 @@
                 android:id="@+id/review_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Reviews"
+                android:text="@string/reviewsTv"
                 android:textColor="@color/movieTitle"
-                android:textSize="26sp" />
+                android:textSize="@dimen/review_tv" />
 
         </LinearLayout>
 
@@ -134,9 +135,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/review_tv_linearLayout" />
+
 
     </android.support.constraint.ConstraintLayout>
 
