--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,4 +14,5 @@
     <dimen name="moviePlotMarginStart">32dp</dimen>
     <dimen name="moviePlotMarginTop">32dp</dimen>
     <dimen name="moviePlotTextSize">15sp</dimen>
+    <dimen name="review_tv">26sp</dimen>
 </resources>
