--- a/app/src/main/res/layout/movie_details.xml
+++ b/app/src/main/res/layout/movie_details.xml
@@ -1,144 +1,162 @@
-<?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@android:color/background_light"
+    android:fitsSystemWindows="true">
 
-    <android.support.constraint.ConstraintLayout
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/main.appbar"
         android:layout_width="match_parent"
+        android:layout_height="350dp"
+        android:fitsSystemWindows="true"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+
+        <android.support.design.widget.CollapsingToolbarLayout
+            android:id="@+id/main.collapsing"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:fitsSystemWindows="true"
+            app:contentScrim="?attr/colorPrimary"
+            app:expandedTitleMarginEnd="64dp"
+            app:expandedTitleMarginStart="48dp"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed">
+
+            <ImageView
+                android:id="@+id/backdrop"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:fitsSystemWindows="true"
+                app:layout_collapseMode="parallax" />
+
+
+        </android.support.design.widget.CollapsingToolbarLayout>
+    </android.support.design.widget.AppBarLayout>
+
+    <android.support.v4.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingBottom="20dp">
+
+
+            <ImageView
+                android:id="@+id/movie_details_poster"
+                android:layout_width="@dimen/moviePoster"
+                android:layout_height="@dimen/moviePosterHeight"
+                android:layout_marginStart="@dimen/moviePosterMarginStart"
+                android:layout_marginTop="32dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:src="@drawable/movie_poster" />
+
+            <TextView
+                android:id="@+id/movie_year"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/movieYearMarginStart"
+                android:layout_marginTop="32dp"
+                android:textSize="@dimen/movieYearTextSize"
+                app:layout_constraintStart_toEndOf="@+id/movie_details_poster"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="2018" />
+
+
+            <TextView
+                android:id="@+id/movie_rating"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/movieRatingMarginTop"
+                app:layout_constraintStart_toStartOf="@+id/movie_year"
+                app:layout_constraintTop_toBottomOf="@+id/movie_year"
+                tools:text="9/10" />
+
+            <TextView
+                android:id="@+id/movie_plot_synopsis"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="@dimen/moviePlotMarginEnd"
+                android:layout_marginStart="@dimen/moviePlotMarginStart"
+                android:layout_marginTop="@dimen/moviePlotMarginTop"
+                android:textSize="@dimen/moviePlotTextSize"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/movie_details_poster"
+                app:layout_constraintTop_toBottomOf="@+id/movie_details_poster"
+                tools:text="Wisecracking mercenary Deadpool battles the evil and powerful Cable and other bad guys to save a boy's life." />
+
+
+            <LinearLayout
+                android:id="@+id/trailer_tv_linearLayout"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginTop="24dp"
+                android:background="@color/layoutTitleBackground"
+                android:gravity="center"
+                android:orientation="vertical"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/movie_plot_synopsis">
+
+                <TextView
+                    android:id="@+id/trailer_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/trailers"
+                    android:textColor="@color/movieTitle"
+                    android:textSize="26sp" />
+            </LinearLayout>
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/trailer_recycler"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/trailer_tv_linearLayout" />
+
+            <LinearLayout
+                android:id="@+id/review_tv_linearLayout"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:background="@color/layoutTitleBackground"
+                android:gravity="center"
+                android:orientation="vertical"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/trailer_recycler">
+
+                <TextView
+                    android:id="@+id/review_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/reviewsTv"
+                    android:textColor="@color/movieTitle"
+                    android:textSize="@dimen/review_tv" />
+
+            </LinearLayout>
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/review_recycler"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/review_tv_linearLayout" />
+
+        </android.support.constraint.ConstraintLayout>
+    </android.support.v4.widget.NestedScrollView>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/favoriteBtn"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingBottom="20dp">
-
-
-        <LinearLayout
-            android:id="@+id/linearLayout"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/titleLayout"
-            android:background="@color/movieTitleBackground"
-            android:gravity="center"
-            android:orientation="vertical"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <TextView
-                android:id="@+id/movie_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/movieTitle"
-                android:textSize="@dimen/movieTitle"
-                tools:text="Deadpool 2" />
-
-        </LinearLayout>
-
-
-        <ImageView
-            android:id="@+id/movie_details_poster"
-            android:layout_width="@dimen/moviePoster"
-            android:layout_height="@dimen/moviePosterHeight"
-            android:layout_marginStart="@dimen/moviePosterMarginStart"
-            android:layout_marginTop="@dimen/moviePosterMarginTop"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
-            tools:src="@drawable/movie_poster" />
-
-        <TextView
-            android:id="@+id/movie_year"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/movieYearMarginStart"
-            android:layout_marginTop="@dimen/movieYearMarginTop"
-            android:textSize="@dimen/movieYearTextSize"
-            app:layout_constraintStart_toEndOf="@+id/movie_details_poster"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
-            tools:text="2018" />
-
-
-        <TextView
-            android:id="@+id/movie_rating"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/movieRatingMarginTop"
-            app:layout_constraintStart_toStartOf="@+id/movie_year"
-            app:layout_constraintTop_toBottomOf="@+id/movie_year"
-            tools:text="9/10" />
-
-        <TextView
-            android:id="@+id/movie_plot_synopsis"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/moviePlotMarginEnd"
-            android:layout_marginStart="@dimen/moviePlotMarginStart"
-            android:layout_marginTop="@dimen/moviePlotMarginTop"
-            android:textSize="@dimen/moviePlotTextSize"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/movie_details_poster"
-            app:layout_constraintTop_toBottomOf="@+id/movie_details_poster"
-            tools:text="Wisecracking mercenary Deadpool battles the evil and powerful Cable and other bad guys to save a boy's life." />
-
-
-
-
-        <LinearLayout
-            android:id="@+id/trailer_tv_linearLayout"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginTop="24dp"
-            android:background="@color/movieTitleBackground"
-            android:gravity="center"
-            android:orientation="vertical"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/movie_plot_synopsis">
-
-            <TextView
-                android:id="@+id/trailer_tv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/trailers"
-                android:textColor="@color/movieTitle"
-                android:textSize="26sp" />
-        </LinearLayout>
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/trailer_recycler"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/trailer_tv_linearLayout" />
-
-        <LinearLayout
-            android:id="@+id/review_tv_linearLayout"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:background="@color/movieTitleBackground"
-            android:gravity="center"
-            android:orientation="vertical"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/trailer_recycler">
-
-            <TextView
-                android:id="@+id/review_tv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/reviewsTv"
-                android:textColor="@color/movieTitle"
-                android:textSize="@dimen/review_tv" />
-
-        </LinearLayout>
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/review_recycler"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/review_tv_linearLayout" />
-
-
-    </android.support.constraint.ConstraintLayout>
-
-</ScrollView>
+        android:layout_margin="32dp"
+        app:layout_anchor="@id/main.appbar"
+        app:layout_anchorGravity="bottom|right|end"
+        app:srcCompat="@android:drawable/btn_star_big_on" />
+</android.support.design.widget.CoordinatorLayout>
