--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,9 +2,9 @@
 <resources>
     <color name="colorPrimary">#000000</color>
     <color name="colorPrimaryDark">#000000</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#029789</color>
 
 
-    <color name="movieTitleBackground">#029789</color>
+    <color name="layoutTitleBackground">#029789</color>
     <color name="movieTitle">#FFFFFF</color>
 </resources>
