moved string and dimension values to respective files

--- a/app/src/main/res/layout/review_item.xml
+++ b/app/src/main/res/layout/review_item.xml
@@ -9,10 +9,10 @@
         android:id="@+id/author"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="24dp"
-        android:textSize="16sp"
+        android:layout_marginEnd="@dimen/reviewAuthorMarginEnd"
+        android:layout_marginStart="@dimen/reviewAuthorMarginStart"
+        android:layout_marginTop="@dimen/reviewAuthorMarginTop"
+        android:textSize="@dimen/reviewAuthorTextSize"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,10 +23,10 @@
         android:id="@+id/content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginBottom="@dimen/reviewContentMarginBottom"
+        android:layout_marginEnd="@dimen/reviewContentMarginEnd"
+        android:layout_marginStart="@dimen/reviewContentMarginStart"
+        android:layout_marginTop="@dimen/reviewContentMarginTop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
