--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,18 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="titleLayout">107dp</dimen>
-    <dimen name="movieTitle">35sp</dimen>
-    <dimen name="moviePoster">150dp</dimen>
+    <dimen name="moviePosterWidth">150dp</dimen>
     <dimen name="moviePosterHeight">225dp</dimen>
     <dimen name="moviePosterMarginStart">32dp</dimen>
-    <dimen name="moviePosterMarginTop">24dp</dimen>
     <dimen name="movieYearMarginStart">32dp</dimen>
-    <dimen name="movieYearMarginTop">24dp</dimen>
     <dimen name="movieYearTextSize">30sp</dimen>
     <dimen name="movieRatingMarginTop">10dp</dimen>
     <dimen name="moviePlotMarginEnd">24dp</dimen>
     <dimen name="moviePlotMarginStart">32dp</dimen>
     <dimen name="moviePlotMarginTop">32dp</dimen>
     <dimen name="moviePlotTextSize">15sp</dimen>
-    <dimen name="review_tv">26sp</dimen>
+    <dimen name="reviewTV">26sp</dimen>
+    <dimen name="favMoviePosterMarginBottom">8dp</dimen>
+    <dimen name="favMoviePosterMarginStart">16dp</dimen>
+    <dimen name="favMoviePosterMarginTop">8dp</dimen>
+    <dimen name="favTitleLinearLayoutWidth">220dp</dimen>
+    <dimen name="favTitleLinearLayoutHeight">225dp</dimen>
+    <dimen name="favTitleLinearLayoutMarginStart">16dp</dimen>
+    <dimen name="favMovieTitleSize">30sp</dimen>
+    <dimen name="movieDetailsAppBarHeight">350dp</dimen>
+    <dimen name="movieDetailsCollapsingToolbarMarginEnd">64dp</dimen>
+    <dimen name="movieDetailsCollapsingToolbarMarginStart">48dp</dimen>
+    <dimen name="movieDetailsConstraintLayoutPaddingBottom">20dp</dimen>
+    <dimen name="movieDetailsPosterMarginTop">32dp</dimen>
+    <dimen name="movieDetailsYearMarginTop">32dp</dimen>
+    <dimen name="MovieDetailsTrailerTVLinearLayoutHeight">50dp</dimen>
+    <dimen name="MovieDetailsTrailerTVLinearMarginTop">24dp</dimen>
+    <dimen name="MovieDetailsTrailerTextSize">26sp</dimen>
+    <dimen name="MovieDetailsReviewTVLinearLayoutHeight">50dp</dimen>
+    <dimen name="movieDetailsFABMargin">24dp</dimen>
+    <dimen name="reviewAuthorMarginEnd">8dp</dimen>
+    <dimen name="reviewAuthorMarginStart">8dp</dimen>
+    <dimen name="reviewAuthorMarginTop">24dp</dimen>
+    <dimen name="reviewAuthorTextSize">16sp</dimen>
+    <dimen name="reviewContentMarginBottom">16dp</dimen>
+    <dimen name="reviewContentMarginEnd">16dp</dimen>
+    <dimen name="reviewContentMarginStart">16dp</dimen>
+    <dimen name="reviewContentMarginTop">24dp</dimen>
+    <dimen name="trailerThumbnailWidth">200dp</dimen>
+    <dimen name="trailerThumbnailHeight">175dp</dimen>
+    <dimen name="trailerThumbnailMarginBottom">8dp</dimen>
+    <dimen name="trailerThumbnailMarginEnd">16dp</dimen>
+    <dimen name="trailerThumbnailMarginStart">16dp</dimen>
+    <dimen name="trailerThumbnailMarginTop">8dp</dimen>
 </resources>
