--- a/app/src/main/res/layout/favorite_item.xml
+++ b/app/src/main/res/layout/favorite_item.xml
@@ -7,21 +7,22 @@
 
     <ImageView
         android:id="@+id/favorite_movie_poster"
-        android:layout_width="150dp"
-        android:layout_height="225dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="@dimen/moviePosterWidth"
+        android:layout_height="@dimen/moviePosterHeight"
+        android:layout_marginBottom="@dimen/favMoviePosterMarginBottom"
+        android:layout_marginStart="@dimen/favMoviePosterMarginStart"
+        android:layout_marginTop="@dimen/favMoviePosterMarginTop"
         android:adjustViewBounds="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:src="@drawable/movie_poster" />
+        tools:src="@drawable/movie_poster"
+        android:contentDescription="@string/favorite_movie_poster_content_description" />
 
     <LinearLayout
-        android:layout_width="220dp"
-        android:layout_height="225dp"
-        android:layout_marginStart="16dp"
+        android:layout_width="@dimen/favTitleLinearLayoutWidth"
+        android:layout_height="@dimen/favTitleLinearLayoutHeight"
+        android:layout_marginStart="@dimen/favTitleLinearLayoutMarginStart"
         android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -33,8 +34,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAlignment="center"
-
-            android:textSize="30sp"
+            android:textSize="@dimen/favMovieTitleSize"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/favorite_movie_poster"
