--- a/app/src/main/res/layout/movie_details.xml
+++ b/app/src/main/res/layout/movie_details.xml
@@ -8,7 +8,7 @@
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
         android:layout_width="match_parent"
-        android:layout_height="350dp"
+        android:layout_height="@dimen/movieDetailsAppBarHeight"
         android:fitsSystemWindows="true"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
@@ -18,8 +18,8 @@
             android:layout_height="match_parent"
             android:fitsSystemWindows="true"
             app:contentScrim="?attr/colorPrimary"
-            app:expandedTitleMarginEnd="64dp"
-            app:expandedTitleMarginStart="48dp"
+            app:expandedTitleMarginEnd="@dimen/movieDetailsCollapsingToolbarMarginEnd"
+            app:expandedTitleMarginStart="@dimen/movieDetailsCollapsingToolbarMarginStart"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
             <ImageView
@@ -28,7 +28,8 @@
                 android:layout_height="match_parent"
                 android:adjustViewBounds="true"
                 android:fitsSystemWindows="true"
-                app:layout_collapseMode="parallax" />
+                app:layout_collapseMode="parallax"
+                android:contentDescription="@string/movie_backdrop_content_description" />
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
@@ -50,25 +51,26 @@
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingBottom="20dp">
+            android:paddingBottom="@dimen/movieDetailsConstraintLayoutPaddingBottom">
 
 
             <ImageView
                 android:id="@+id/movie_details_poster"
-                android:layout_width="@dimen/moviePoster"
+                android:layout_width="@dimen/moviePosterWidth"
                 android:layout_height="@dimen/moviePosterHeight"
                 android:layout_marginStart="@dimen/moviePosterMarginStart"
-                android:layout_marginTop="32dp"
+                android:layout_marginTop="@dimen/movieDetailsPosterMarginTop"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:src="@drawable/movie_poster" />
+                tools:src="@drawable/movie_poster"
+                android:contentDescription="@string/movie_details_content_description" />
 
             <TextView
                 android:id="@+id/movie_year"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/movieYearMarginStart"
-                android:layout_marginTop="32dp"
+                android:layout_marginTop="@dimen/movieDetailsYearMarginTop"
                 android:textSize="@dimen/movieYearTextSize"
                 app:layout_constraintStart_toEndOf="@+id/movie_details_poster"
                 app:layout_constraintTop_toTopOf="parent"
@@ -101,8 +103,8 @@
             <LinearLayout
                 android:id="@+id/trailer_tv_linearLayout"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_marginTop="24dp"
+                android:layout_height="@dimen/MovieDetailsTrailerTVLinearLayoutHeight"
+                android:layout_marginTop="@dimen/MovieDetailsTrailerTVLinearMarginTop"
                 android:background="@color/layoutTitleBackground"
                 android:gravity="center"
                 android:orientation="vertical"
@@ -116,7 +118,7 @@
                     android:layout_height="wrap_content"
                     android:text="@string/trailers"
                     android:textColor="@color/movieTitle"
-                    android:textSize="26sp" />
+                    android:textSize="@dimen/MovieDetailsTrailerTextSize" />
             </LinearLayout>
 
             <android.support.v7.widget.RecyclerView
@@ -130,7 +132,7 @@
             <LinearLayout
                 android:id="@+id/review_tv_linearLayout"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="@dimen/MovieDetailsReviewTVLinearLayoutHeight"
                 android:background="@color/layoutTitleBackground"
                 android:gravity="center"
                 android:orientation="vertical"
@@ -144,7 +146,7 @@
                     android:layout_height="wrap_content"
                     android:text="@string/reviewsTv"
                     android:textColor="@color/movieTitle"
-                    android:textSize="@dimen/review_tv" />
+                    android:textSize="@dimen/reviewTV" />
 
             </LinearLayout>
 
@@ -163,7 +165,7 @@
         android:id="@+id/favoriteBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="24dp"
+        android:layout_margin="@dimen/movieDetailsFABMargin"
         app:layout_anchor="@id/appbar"
         app:layout_anchorGravity="bottom|right|end"
         app:srcCompat="@android:drawable/btn_star_big_on" />
