--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -3,4 +3,6 @@
     android:id="@+id/movie_poster"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:adjustViewBounds="true" />
+    android:adjustViewBounds="true"
+    android:scaleType="fitXY"
+    android:contentDescription="@string/movie_poster_content_description" />
